microservices/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: pharmacy
spec:
  selector:
    app: billing-service
  ports:
    - port: 5004
      targetPort: 5004
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: pharmacy
spec:
  selector:
    app: customer-service
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: pharmacy
spec:
  selector:
    app: inventory-service
  ports:
    - port: 5004
      targetPort: 5004
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: pharmacy
spec:
  selector:
    app: order-service
  ports:
    - port: 5004
      targetPort: 5004
  type: ClusterIP
...
